<resources>
    <string name="app_name" translatable="false">BasicAndroidApp</string>

    <string name="label_firstname">Prénom:</string>
    <string name="label_lastname">Nom:</string>
    <string name="label_age">Âge:</string>
    <string name="label_domain">Domaine de compétences:</string>
    <string name="label_phoneNumber">Numéro de téléphone:</string>
    <string name="btn_return">Retour</string>
    <string name="btn_validate">Valider</string>

    <string name="alert_yes">Oui</string>
    <string name="alert_no">Non</string>

    <string name="name_error">Veuillez renseigner les champs Nom et Prénom.</string>
    <string name="phoneNumber_error">Veuillez renseigner le champ Numéro de téléphone.</string>

    <string name="title_validation">Confirmer les informations</string>
    <string name="message_validation">Confirmez-vous les informations renseignés ?</string>
    <string name="cancelled_validation">Vous avez annulé la validation</string>
    <string name="confirm_btn" translatable="false">Ok</string>
    <string name="confirm_text">Confirmer ces informations ?</string>
    <string name="call_text">Appeler ?</string>
    <string name="call_btn">Appeler</string>
    <string name="trainSchedule_title">Indiquez votre itinéraire !</string>
    <string name="title_phone">Appeler</string>
    <string name="title_train">Train</string>
    <string name="title_agenda">Agenda</string>
    <string name="home_title">Accueil</string>
    <string name="train_departure">Départ</string>
    <string name="train_arrival">Arrivé</string>
    <string name="search">Rechercher</string>
    <string name="hello_name">Bonjour, Bilal 👋</string>
    <string name="add_contact">Ajouter un contact</string>
    <string name="itinary_subtitle">Plus de 1000 itinéraires possible...</string>
    <string name="create_event">Ajouter un événement</string>
    <string name="btn_add_event">Ajouter</string>
    <string name="agenda_success">Evénement ajouté avec succès !</string>
    <string name="agenda_date_error">Une erreur est survenue...</string>

</resources>